--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -203,7 +203,7 @@
 						<ul class="dropdown-menu">
 							<li class="mt5">
 								<a th:href="@{/system/user/profile}" class="menuItem noactive">
-								<i class="fa fa-user"></i> 个人中心</a>user/profile
+								<i class="fa fa-user"></i> 个人中心</a>
 							</li>
 							<li>
 								<a onclick="resetPwd()">
